# KursovayaDjango

./: .env.sample  README.md  pyproject.toml
config/: settings.py
