[tool.poetry]
name = "kursovayadjango"
version = "0.1.0"
description = ""
authors = ["AlTim <aleks00_777@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "4.2.2"
redis = "^6.2.0"
pillow = "^11.2.1"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
